[package]
name = "bonomen"
version = "0.2.0"
authors = ["0xcpu <https://github.com/0xcpu>"]

[target.'cfg(windows)'.dependencies.winapi]
version = "*"
[target.'cfg(windows)'.dependencies.kernel32-sys]
version = "*"
[target.'cfg(unix)'.dependencies.psutil]
version = "*"

[dependencies]
libc   = "*"
strsim = "*"
clap   = "*"
log    = "*"
term   = "*"

[profile.dev]
opt-level = 3

[profile.release]
debug-assertions = true